--- a/main.html
+++ b/main.html
@@ -8,6 +8,33 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header role="heading">
+        <h1>My Portfolio</h1>
+    </header>
+
+    <nav role="navigation">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <section>
+            <img src="portfolio.jpg" alt="Portfolio Image" role="img">
+            <p role="description">Welcome to my portfolio! Here, you can explore my latest projects and artworks.</p>
+        </section>
+
+        <section>
+            <h2>Projects</h2>
+            <ul role="list">
+                <li role="listitem">Project 1</li>
+                <li role="listitem">Project 2</li>
+                <li role="listitem">Project 3</li>
+            </ul>
+        </section>
+    </main>
     <script type="text/javascript" src="./script.js">
 </script>
 
